--- a/stock_market_analysis.ipynb
+++ b/stock_market_analysis.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Stock Market Analysis\n",
-    "In this data analysis project, we will look at data from the stock market, particularly some technology stocks. We will be using some stock information in .csv format. We will learn how to visualize different aspects of the stocks, and finally we will look at a few ways of analysing the risk of a stock, based on its previous performance history. We will also be predicting future stock prices through a Monte Carlo method!!\n",
+    "This data analysis project looks at data from the stock market, particularly some technology stocks. We will be using some stock information in .csv format. We will learn how to visualize different aspects of the stocks, and finally we will look at a few ways of analysing the risk of a stock, based on its previous performance history. We will also be predicting future stock prices through a Monte Carlo method!!\n",
     "\n",
     "We will be answering the following questions along the way:\n",
     "\n",
@@ -3452,22 +3452,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Great job!"
+    "### Thanks for going through this Stock Market Data Analysis Project !!!"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
